Add Mock Auth APIs
