# app/controllers/api/v1/login_controller.rb
@@ -1,0 +1,12 @@
+class Api::V1::LoginController < UnauthorizedController
+  def create
+    @user = User.find_by(email: params[:email])
+    if @user && @user.authenticate(params[:password])
+      payload = { token: @user.issue_jwt_token }
+      payload[:refresh_token] = @user.issue_jwt_token(type: :refresh) if params[:remember_me]
+      render json: payload, status: :ok
+    else
+      render json: { error: 'Invalid username or password' }, status: :unauthorized
+    end
+  end
+end
