# app/controllers/application_controller.rb
@@ -1,4 +1,5 @@
 class ApplicationController < ActionController::API
+  before_action :authorized
   wrap_parameters false
   include Pagy::Backend
 
@@ -8,6 +9,40 @@ class ApplicationController < ActionController::API
 
   rescue_from ActionController::ParameterMissing do |exception|
     render json: { error: exception.message }, status: :bad_request
+  end
+
+  rescue_from JWT::ExpiredSignature do |exception|
+    render(json: { error: 'Token has expired' }, status: :unauthorized)
+  end
+
+  rescue_from JWT::DecodeError do |exception|
+    render json: { error: 'Please log in' }, status: :unauthorized
+  end
+
+  def auth_header
+    request.headers['Authorization']
+  end
+
+  def decoded_token
+    if auth_header
+      token = auth_header.split(' ')[1]
+      JWT.decode(token, ENV['JWT_SECRET'], true, algorithm: 'HS256')
+    end
+  end
+
+  def current_user
+    if decoded_token
+      user_id = decoded_token[0]['user_id']
+      @current_user ||= User.find_by(id: user_id)
+    end
+  end
+
+  def logged_in?
+    !!current_user
+  end
+
+  def authorized
+    render json: { error: 'Please log in' }, status: :unauthorized unless logged_in?
   end
 
   private
